welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: value avance is not a member of Unit
	avance () ; mark()  avance() ; gauche ()
                            ^